--- a/index.html
+++ b/index.html
@@ -3,57 +3,89 @@
    <head>
       <meta charset="UTF-8" />
       <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <link
-         rel="stylesheet"
-         href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
-         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T"
+      <title>Portfolio Example | Software Engineer</title>
+      <link rel="icon" type="image/x-icon" href="favicon.ico" />
+      <script
+         src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"
          crossorigin="anonymous"
+      ></script>
+      <link
+         href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
+         rel="stylesheet"
+      />
+      <link
+         href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+         rel="stylesheet"
+         type="text/css"
+      />
+      <link
+         href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
+         rel="stylesheet"
       />
       <link href="style.css" rel="stylesheet" />
-      <title>Document</title>
    </head>
    <body id="page-top">
-      <nav class="navbar navbar-expand-lg navbar-dark bg-dark fixed-top">
+      <nav
+         class="navbar navbar-expand-lg navbar-light fixed-top py-3"
+         id="mainNav"
+      >
          <div class="container">
             <a class="navbar-brand" href="#page-top">Home</a>
             <div class="collapse navbar-collapse">
                <ul class="navbar-nav ml-auto">
                   <li class="nav-item">
-                     <a class="nav-link" href="#about">About</a>
+                     <a class="nav-link js-scroll-trigger" href="#about"
+                        >About</a
+                     >
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#portfolio">Portfolio</a>
+                     <a class="nav-link js-scroll-trigger" href="#portfolio"
+                        >Portfolio</a
+                     >
                   </li>
                   <li class="nav-item">
-                     <a class="nav-link" href="#contact">Contact</a>
+                     <a class="nav-link js-scroll-trigger" href="#contact"
+                        >Contact</a
+                     >
                   </li>
                </ul>
             </div>
          </div>
       </nav>
-      <div class="container">
-         <div class="jumbotron">
-            <h1>Hello, I'm a software developer!</h1>
-            <p>I work with Java, Javascript, etc.</p>
-         </div>
-         <p>This is some text.</p>
-         <p>This is another text.</p>
-      </div>
 
-      <script
-         src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
-         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
-         crossorigin="anonymous"
-      ></script>
-      <script
-         src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js"
-         integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1"
-         crossorigin="anonymous"
-      ></script>
-      <script
-         src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
-         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
-         crossorigin="anonymous"
-      ></script>
+      <header class="masthead">
+         <div class="container h-100">
+            <div
+               class="row h-100 align-items-center justify-content-center text-center"
+            >
+               <div class="col-lg-10 align-self-end">
+                  <h1 class="text-uppercase text-white font-weight-bold">
+                     Portfolio Example
+                  </h1>
+                  <hr class="divider my-4" />
+               </div>
+               <div class="col-lg-8 align-self-baseline">
+                  <p class="text-white-75 font-weight-light mb-5">
+                     This is a portfolio example. It is a long established fact
+                     that a reader will be distracted by the readable content of
+                     a page when looking at its layout.
+                  </p>
+                  <a
+                     class="btn btn-primary btn-xl text-white js-scroll-trigger"
+                     href="#about"
+                     >More info!</a
+                  >
+               </div>
+            </div>
+         </div>
+      </header>
+
+      <section class="page-section bg-primary" id="about"></section>
+
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+      <script src="script.js"></script>
    </body>
 </html>
