--- a/index.html
+++ b/index.html
@@ -1,202 +1,202 @@
 <!DOCTYPE html>
 <html lang="en">
-   <head>
-      <meta charset="UTF-8" />
-      <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-      <title>Portfolio Example | Software Engineer</title>
-      <link rel="icon" type="image/x-icon" href="favicon.ico" />
-      <script
-         src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"
-         crossorigin="anonymous"
-      ></script>
-      <link
-         href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
-         rel="stylesheet"
-      />
-      <link
-         href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
-         rel="stylesheet"
-         type="text/css"
-      />
-      <link
-         href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
-         rel="stylesheet"
-      />
-      <link href="style.css" rel="stylesheet" />
-   </head>
-   <body id="page-top">
-      <nav
-         class="navbar navbar-expand-lg navbar-light fixed-top py-3"
-         id="mainNav"
-      >
-         <div class="container">
-            <a class="navbar-brand" href="#page-top"
-               ><i class="fas fa-laptop-code mr-2"></i>Home</a
-            >
-            <button
-               class="navbar-toggler navbar-toggler-right"
-               type="button"
-               data-toggle="collapse"
-               data-target="#navbarResponsive"
-               aria-controls="navbarResponsive"
-               aria-expanded="false"
-               aria-label="Navigation"
-            >
-               <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarResponsive">
-               <ul class="navbar-nav ml-auto">
-                  <li class="nav-item">
-                     <a class="nav-link js-scroll-trigger" href="#about"
-                        >About</a
-                     >
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link js-scroll-trigger" href="#portfolio"
-                        >Portfolio</a
-                     >
-                  </li>
-                  <li class="nav-item">
-                     <a class="nav-link js-scroll-trigger" href="#contact"
-                        >Contact</a
-                     >
-                  </li>
-               </ul>
-            </div>
-         </div>
-      </nav>
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Portfolio Example | Software Engineer</title>
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <script
+      src="https://use.fontawesome.com/releases/v5.13.0/js/all.js"
+      crossorigin="anonymous"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather+Sans:400,700"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Merriweather:400,300,300italic,400italic,700,700italic"
+      rel="stylesheet"
+      type="text/css"
+    />
+    <link
+      href="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/magnific-popup.min.css"
+      rel="stylesheet"
+    />
+    <link href="style.css" rel="stylesheet" />
+  </head>
+  <body id="page-top">
+    <nav
+      class="navbar navbar-expand-lg navbar-light fixed-top py-3"
+      id="mainNav"
+    >
+      <div class="container">
+        <a class="navbar-brand" href="#page-top"
+          ><i class="fas fa-laptop-code mr-2"></i>Home</a
+        >
+        <button
+          class="navbar-toggler navbar-toggler-right"
+          type="button"
+          data-toggle="collapse"
+          data-target="#navbarResponsive"
+          aria-controls="navbarResponsive"
+          aria-expanded="false"
+          aria-label="Navigation"
+        >
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarResponsive">
+          <ul class="navbar-nav ml-auto">
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#about">About</a>
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#portfolio"
+                >Portfolio</a
+              >
+            </li>
+            <li class="nav-item">
+              <a class="nav-link js-scroll-trigger" href="#contact">Contact</a>
+            </li>
+          </ul>
+        </div>
+      </div>
+    </nav>
 
-      <header class="masthead">
-         <div class="container h-100">
-            <div
-               class="row h-100 align-items-center justify-content-center text-center"
-            >
-               <div class="col-lg-10 align-self-end">
-                  <h1 class="text-uppercase text-white font-weight-bold">
-                     Portfolio Example
-                  </h1>
-                  <hr class="divider my-4" />
-               </div>
-               <div class="col-lg-8 align-self-baseline">
-                  <p class="text-white-75 font-weight-light mb-5">
-                     This is a portfolio example. It is a long established fact
-                     that a reader will be distracted by the readable content of
-                     a page when looking at its layout.
-                  </p>
-                  <a
-                     class="btn btn-primary btn-xl text-white js-scroll-trigger"
-                     href="#about"
-                  >
-                     More info!</a
-                  >
-               </div>
-            </div>
-         </div>
-      </header>
-
-      <section class="page-section bg-primary" id="about">
-         <div class="container">
-            <div class="row justify-content-center">
-               <div class="col-lg-8 text-center">
-                  <h2 class="text-white mt-0">This is about me!</h2>
-                  <hr class="divider light my-4" />
-                  <p class="text-white-50 mb-4">
-                     It is a long established fact that a reader will be
-                     distracted by the readable content of a page when looking
-                     at its layout.
-                  </p>
-                  <a
-                     class="btn btn-light btn-xl js-scroll-trigger mt-3"
-                     href="#contact"
-                     >Contact me!</a
-                  >
-               </div>
-            </div>
-         </div>
-      </section>
-
-      <section id="portfolio">
-         <div class="container-fluid p-0">
-            <div class="row no-gutters">
-               <div class="col-lg-4 cols-sm-6">
-                  <a class="portfolio-box" href="img/portfolio1.png">
-                     <img class="img-fluid" src="img/portfolio1.png" />
-                     <div class="portfolio-box-caption">
-                        <div class="project-category text-white-50">
-                           A short description
-                        </div>
-                        <div class="project-name">Project Name</div>
-                     </div>
-                  </a>
-               </div>
-               <div class="col-lg-4 cols-sm-6">
-                  <a class="portfolio-box" href="img/portfolio2.jpeg">
-                     <img class="img-fluid" src="img/portfolio2.jpeg" />
-                     <div class="portfolio-box-caption">
-                        <div class="project-category text-white-50">
-                           A short description
-                        </div>
-                        <div class="project-name">Project Name</div>
-                     </div>
-                  </a>
-               </div>
-               <div class="col-lg-4 cols-sm-6">
-                  <a class="portfolio-box" href="img/portfolio3.jpg">
-                     <img class="img-fluid" src="img/portfolio3.jpg" />
-                     <div class="portfolio-box-caption">
-                        <div class="project-category text-white-50">
-                           A short description
-                        </div>
-                        <div class="project-name">Project Name</div>
-                     </div>
-                  </a>
-               </div>
-            </div>
-         </div>
-      </section>
-      <section class="page-section bg-dark text-white">
-         <div class="container text-center">
-            <h2 class="mb-4">Visit my GitHub!</h2>
+    <header class="masthead">
+      <div class="container h-100">
+        <div
+          class="
+            row
+            h-100
+            align-items-center
+            justify-content-center
+            text-center
+          "
+        >
+          <div class="col-lg-10 align-self-end">
+            <h1 class="text-uppercase text-white font-weight-bold">
+              Portfolio Example
+            </h1>
+            <hr class="divider my-4" />
+          </div>
+          <div class="col-lg-8 align-self-baseline">
+            <p class="text-white-75 font-weight-light mb-5">
+              This is a portfolio example. It is a long established fact that a
+              reader will be distracted by the readable content of a page when
+              looking at its layout.
+            </p>
             <a
-               class="btn btn-light btn-xl js-scroll-trigger mt-3"
-               href="https://github.com/callanbr"
-               target="_blank"
-               >GitHub!</a
+              class="btn btn-primary btn-xl text-white js-scroll-trigger"
+              href="#about"
             >
-         </div>
-      </section>
-      <section class="page-section" id="contact">
-         <div class="container">
-            <div class="row justify-content-center">
-               <div class="col-lg-8 text-center">
-                  <h2 class="mt-0">Contact me!</h2>
-                  <hr class="divider my-4" />
-                  <p class="">
-                     It is a long established fact that a reader will be
-                     distracted by the readable content of a page when looking
-                     at its layout.
-                  </p>
-               </div>
-            </div>
-            <div class="row">
-               <div class="col-lg-4 ml-auto text-center">
-                  <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
-                  <div>(987) 654 3210</div>
-               </div>
-               <div class="col-lg-4 mr-auto text-center">
-                  <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
-                  <a class="d-block" href="mailto:contact@example.com"
-                     >contact@example.com</a
-                  >
-               </div>
-            </div>
-         </div>
-      </section>
+              More info!</a
+            >
+          </div>
+        </div>
+      </div>
+    </header>
 
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
-      <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
-      <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
-      <script src="script.js"></script>
-   </body>
+    <section class="page-section bg-primary" id="about">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <h2 class="text-white mt-0">This is about me!</h2>
+            <hr class="divider light my-4" />
+            <p class="text-white-50 mb-4">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+            <a
+              class="btn btn-light btn-xl js-scroll-trigger mt-3"
+              href="#contact"
+              >Contact me! Example</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <section id="portfolio">
+      <div class="container-fluid p-0">
+        <div class="row no-gutters">
+          <div class="col-lg-4 cols-sm-6">
+            <a class="portfolio-box" href="img/portfolio1.png">
+              <img class="img-fluid" src="img/portfolio1.png" />
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                  A short description
+                </div>
+                <div class="project-name">Project Name</div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 cols-sm-6">
+            <a class="portfolio-box" href="img/portfolio2.jpeg">
+              <img class="img-fluid" src="img/portfolio2.jpeg" />
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                  A short description
+                </div>
+                <div class="project-name">Project Name</div>
+              </div>
+            </a>
+          </div>
+          <div class="col-lg-4 cols-sm-6">
+            <a class="portfolio-box" href="img/portfolio3.jpg">
+              <img class="img-fluid" src="img/portfolio3.jpg" />
+              <div class="portfolio-box-caption">
+                <div class="project-category text-white-50">
+                  A short description
+                </div>
+                <div class="project-name">Project Name</div>
+              </div>
+            </a>
+          </div>
+        </div>
+      </div>
+    </section>
+    <section class="page-section bg-dark text-white">
+      <div class="container text-center">
+        <h2 class="mb-4">Visit my GitHub!</h2>
+        <a
+          class="btn btn-light btn-xl js-scroll-trigger mt-3"
+          href="https://github.com/callanbr"
+          target="_blank"
+          >GitHub!</a
+        >
+      </div>
+    </section>
+    <section class="page-section" id="contact">
+      <div class="container">
+        <div class="row justify-content-center">
+          <div class="col-lg-8 text-center">
+            <h2 class="mt-0">Contact me!</h2>
+            <hr class="divider my-4" />
+            <p class="">
+              It is a long established fact that a reader will be distracted by
+              the readable content of a page when looking at its layout.
+            </p>
+          </div>
+        </div>
+        <div class="row">
+          <div class="col-lg-4 ml-auto text-center">
+            <i class="fas fa-phone fa-3x mb-3 text-muted"></i>
+            <div>(987) 654 3210</div>
+          </div>
+          <div class="col-lg-4 mr-auto text-center">
+            <i class="fas fa-envelope fa-3x mb-3 text-muted"></i>
+            <a class="d-block" href="mailto:contact@example.com"
+              >contact@example.com</a
+            >
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.5.0/js/bootstrap.bundle.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.4.1/jquery.easing.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/magnific-popup.js/1.1.0/jquery.magnific-popup.min.js"></script>
+    <script src="script.js"></script>
+  </body>
 </html>
