removed example change

--- a/index.html
+++ b/index.html
@@ -109,8 +109,8 @@
             <a
               class="btn btn-light btn-xl js-scroll-trigger mt-3"
               href="#contact"
-              >Contact me! Example</a
-            >
+              >Contact me!
+            </a>
           </div>
         </div>
       </div>
